--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -19,7 +19,8 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         bridge.cpp
         Util.cpp
-        VideoApp.cpp)
+        VideoApp.cpp
+        Camera.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
